Add new video course "Clojure Hacker" to resources

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -102,6 +102,7 @@ Video training (commercial):
 * https://lambdaisland.com/[Lambda Island] - Screencast series about ClojureScript and Clojure
 * https://www.learnreagent.com/[Learn Reagent] - Jacek Schae
 * https://www.learnreframe.com/[Learn re-frame] - Jacek Schae
+* https://clojurehacker.com[Clojure Hacker] - build real web apps in Clojure and ClojureScript - Paul Jankowski
 
 == Conferences
 
