--- a/content/news/2022/10/10/deref.adoc
+++ b/content/news/2022/10/10/deref.adoc
@@ -51,7 +51,7 @@ New releases and tools this week:
 * https://github.com/askonomm/ruuter[ruuter] 1.3 - A zero-dependency HTTP router
 * https://github.com/clojure-lsp/clojure-lsp[clojure-lsp] https://github.com/clojure-lsp/clojure-lsp/releases/tag/2022.10.05-16.39.51[2022.10.05-16.39.51] - Clojure & ClojureScript Language Server (LSP) implementation
 * https://github.com/clj-kondo/clj-kondo[clj-kondo] https://github.com/clj-kondo/clj-kondo/blob/master/CHANGELOG.md#20221005[2022.10.05] - Static analyzer and linter for Clojure code that sparks joy
-* https://github.com/brettwooldridge/HikariCP[HikariCP] 3.0.0 - A Clojure wrapper to HikariCP JDBC connection pool
+* https://github.com/tomekw/hikari-cp[Hikari-cp] 3.0.0 - A Clojure wrapper to HikariCP JDBC connection pool
 * https://github.com/fulcrologic/fulcro[fulcro] 3.5.28 - A library for development of single-page full-stack web applications in clj/cljs
 * https://github.com/camsaul/methodical[methodical] https://github.com/camsaul/methodical/releases/tag/0.15.0.1[0.15.0.1] - Functional and flexible multimethods for Clojure
 * https://github.com/borkdude/gh-release-artifact[gh-release-artifact] 0.1.0 - Upload artifacts to Github releases idempotently
