--- a/content/news/2022/10/21/deref.adoc
+++ b/content/news/2022/10/21/deref.adoc
@@ -45,7 +45,7 @@ New releases and tools this week:
 * https://github.com/djblue/portal[portal] 0.33.0 - A data inspection / exploration tool for Clojure
 * https://github.com/babashka/sci[sci] 0.5.34 - Configurable Clojure interpreter suitable for scripting and Clojure DSLs
 * https://github.com/lambdaisland/deja-fu[deja-fu] 1.3.51  - Lightweight ClojureScript local time/date library
-* https://www.datomic.com/on-prem.html[https://www.datomic.com/on-prem.html] https://docs.datomic.com/on-prem/changes.html#1.0.6527[1.0.6527] - Datomic On-Prem
+* https://www.datomic.com/on-prem.html[Datomic On-Prem] https://docs.datomic.com/on-prem/changes.html#1.0.6527[1.0.6527] - A transactional database with a flexible data model, elastic scaling, and rich queries
 * https://github.com/AvisoNovate/pretty[pretty] 1.3 - Library for helping print things prettily, in Clojure
 * https://github.com/justone/tabl[tabl] https://github.com/justone/tabl/releases/tag/v0.3.0[0.3.0] - Make tables from data in your terminal
 * https://github.com/squint-cljs/squint[squint] 0.0.0-alpha.50 - ClojureScript syntax to JavaScript compiler
