update guides index

--- a/content/guides/guides.adoc
+++ b/content/guides/guides.adoc
@@ -29,4 +29,5 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 === Libraries
 
+* <<async_walkthrough#,core.async Walkthrough>>
 * <<core_async_go#,Go Block Best Practices>>
