--- a/content/news/2022/11/11/deref.adoc
+++ b/content/news/2022/11/11/deref.adoc
@@ -59,4 +59,5 @@ New releases and tools this week:
 * https://github.com/PEZ/prettier-plugin-clojure[prettier-plugin-clojure]  - An (almost) indentation-only, non-configurable, Prettier Plugin for Clojure and ClojureScript
 * https://github.com/liquidz/build.edn[build.edn] 0.8.174 - Make your Clojure library build process easy
 * https://github.com/wardle/hermes[hermes] 1.0.776 - A library and microservice implementing the health and care terminology SNOMED CT
+* https://github.com/borkdude/quickdoc[quickdoc] 0.2.3 - Quick and minimal API doc generation for Clojure
 
