--- a/content/news/2022/11/11/deref.adoc
+++ b/content/news/2022/11/11/deref.adoc
@@ -22,6 +22,7 @@ I also wanted to highlight https://seqfind.com[SeqFind] this week - it's a first
 * https://www.youtube.com/watch?v=eubg-fjRh9E[NLP in Clojure Session 2 - Clojure, Python, DVC, Metamorph] - Sci Cloj
 * https://www.youtube.com/watch?v=JSMcK5strRo[Clojure visual-tools meeting 16 - play.teod.eu, Kindly] - Sci Cloj
 * https://www.youtube.com/watch?v=kME868FvT2A[Clojure data-recur meeting 4: Tablecloth] - Sci Cloj
+* https://www.youtube.com/watch?v=HUWwBxWTnYw[LeetCode 23 in Clojure — imperative PriorityQueue vs. functional priority-map] - Fred Overflow
 
 == Blogs and articles
 
