Add Composer.Trade to companies list

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -110,6 +110,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Collective Digital Studio
 * Commonwealth Robotics
 * Commsor
+* Composer.Trade
 * Compute Software
 * Condense
 * Consumer Reports
