--- a/content/reference/deps_and_cli.adoc
+++ b/content/reference/deps_and_cli.adoc
@@ -659,7 +659,13 @@ Currently, only `jar` artifacts are supported. Support for other artifact types 
 
 The `mvn` procurer will look for two configuration keys at the root of the deps.edn:
 
-* `:mvn/repos` - map of repository name to repository descriptor, a map currently taking only the key `:url`
+* `:mvn/repos` - map of repository name to repository descriptor, a map of:
+  * `:url` - required, url string
+  * `:releases` - a https://maven.apache.org/pom.html#repositories[repository policy] map for releases:
+    * `:enabled` - boolean, default=true
+	* `:update` - a flag for how often to check the repo for updates, one of `:daily` (default), `:always`, `:never`, or an interval in minutes (integer)
+	* `:checksum` - a flag for checksum validation, one of `:warn` (default), `:fail`, `:ignore`
+  * `:snapshots` - repository policy map for snapshots (same structure as `:releases`)
 * `:mvn/local-repo` - a path (string) to the local repo cache. If none supplied, Maven uses `~/.m2/repository`.
 
 The root deps.edn configures these default Maven repos:
@@ -670,6 +676,19 @@ The root deps.edn configures these default Maven repos:
  {"central" {:url "https://repo1.maven.org/maven2/"}
   "clojars" {:url "https://clojars.org/repo"}}}
 ----
+
+While specifying repository name and url is typically all that is required, full repository policy maps can also be provided:
+
+[source,clojure]
+----
+{:mvn/repos
+ {"my-releases" {:url "https://example.com/releases"
+                 :snapshots {:enabled false}
+				 :releases {:enabled true
+				            :update :daily
+							:checksum :fail}}}}
+----
+
 
 === Modifying the default repositories
 
