--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,12 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.10.3/CHANGELOG.md[repo changelog].
 
+=== 1.11.1.1200 (Nov 14, 2022) [[v1.11.1.1200]]
+
+* Added support in :mvn/repos map to set release and snapshot policies
+* https://clojure.atlassian.net/browse/TDEPS-101[TDEPS-101] Output repo policies in -Spom and -X:deps mvn-pom
+* Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.15.1254
+
 === 1.11.1.1189 (Nov 2, 2022) [[v1.11.1.1189]]
 
 * https://clojure.atlassian.net/browse/TDEPS-233[TDEPS-233] bash script fixes from stale jar check changes
