Add available courses and clojure.stream

--- a/content/community/training.adoc
+++ b/content/community/training.adoc
@@ -45,6 +45,10 @@ Several courses are offered.
 | https://www.udemy.com/learning-clojure | Will teach you how to write Clojure code and structure Clojure products
 | https://learnreframe.com | Learn ClojureScript and re-frame by building CHEFFY; AirBnB for chefs.
 | https://learnreagent.com | Learn ClojureScript and Reagent by building GIGGIN an app that showcase local gigs.
+| https://learnreitit.com | Learn how to build robust REST API with Clojure by composing libraries including Reitit, Ring, Integrant, and next.jdbc.
+| https://learndatomic.com | Video course about Datomic Cloud. Including Datomic dev-local, Datomic Ions, and AWS deployment.
+| https://learnpedestal.com | Learn how to build REST API with data-driven interceptors, structuring the system with Component, and Datomic.
+| https://clojure.stream | Your one place for all things Clojure, ClojureScript, and Datalog. Courses, Podcast, Workshops, and ...
 |===
 
 === ClojureBridge
