add clojure community on fediverse
aka clj.social

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -20,6 +20,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * https://discord.gg/discljord[Discljord Clojure Discord Server]
 * https://discord.gg/MsejPv9JNG[Clojurians Discord Server]
 * https://twitter.com/i/communities/1494013093059432451[Twitter Community]
+* https://clj.social[Clojure Community on Fediverse]
 
 == Tutorials and Learning Materials
 
