add link to deref

--- a/content/news/2022/11/18/deref.adoc
+++ b/content/news/2022/11/18/deref.adoc
@@ -54,3 +54,4 @@ New releases and tools this week:
 * https://github.com/fulcrologic/fulcro-rad[fulcro-rad] 1.3.8 - Fulcro Rapid Application Development
 * https://github.com/fulcrologic/fulcro-rad-semantic-ui[fulcro-rad-semantic-ui]  - Semantic UI Rendering Plugin for RAD
 * https://github.com/mauricioszabo/generic-lsp[generic-lsp] 0.1.3 - LSP capabilities for Atom/Pulsar
+* https://github.com/borkdude/rewrite-edn[rewrite-edn] 0.4.5 - Utility lib on top of rewrite-clj with common operations to update EDN
