add lib to deref

--- a/content/news/2022/11/23/deref.adoc
+++ b/content/news/2022/11/23/deref.adoc
@@ -40,3 +40,4 @@ New releases and tools this week:
 * https://github.com/BetterThanTomorrow/calva[calva] https://github.com/BetterThanTomorrow/calva/releases/tag/v2.0.320[2.0.320] - Clojure & ClojureScript Interactive Programming for VS Code
 * https://github.com/BetterThanTomorrow/joyride[joyride] 0.0.23 - Making VS Code Hackable since 2022
 * https://github.com/babashka/scittle[scittle] 0.4.11 - Execute Clojure(Script) directly from browser script tags via SCI
+* https://git.sr.ht/~jomco/select-tree[select-tree] 0.1.0 - Clojure library to recursively select subtrees of collections
