add link to deref

--- a/content/news/2022/11/23/deref.adoc
+++ b/content/news/2022/11/23/deref.adoc
@@ -15,6 +15,7 @@ In this week of thanks, thank you to the Clojure community! It is a pleasure to 
 
 * https://cognitect.com/cognicast/172[Janet A Carr - Cognicast Episode 172] - Cognicast
 * https://www.youtube.com/watch?v=AYKIR1oh62Y[#1: Michiel Borkent @borkdude] - Show Me Your REPL
+* https://clojure.stream/podcast[E84 Exoscale with Pierre-Yves Ritschard] - ClojureStream Podcast with Jacek Schae
 * https://www.youtube.com/watch?v=B7_3hVF8zSc[Clojure defpure news 📰 filter-stack-trace for test errors] - Fred Overflow
 * https://www.youtube.com/watch?v=2hBl31QP9Pc[Clojure and the Functional Paradigm] - Codurance
 
