Wrap `not=` in quotes for formatting
I believe the `=` sign was causing this to be parsed as an [attribute list.](https://docs.asciidoctor.org/asciidoc/latest/attributes/positional-and-named-attributes/#attribute-list-parsing) 
Wrapping the link text in double quotes as recommended by the asciidoc docs (that was fun to say) made it render correctly for GH's baked in AsciiDoc parser as well.

--- a/content/reference/other_functions.adoc
+++ b/content/reference/other_functions.adoc
@@ -16,7 +16,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 toc::[]
 
 [%hardbreaks]
-Boolean and comparison functions: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/=[=] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/==[==] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/identical?[identical?] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/not=[not=] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/not[not] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/true?[true?] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/false?[false?] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/nil?[nil?]
+Boolean and comparison functions: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/=[=] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/==[==] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/identical?[identical?] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/not=["not="] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/not[not] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/true?[true?] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/false?[false?] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/nil?[nil?]
 Miscellaneous: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/identity[identity] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/dotimes[dotimes] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/time[time] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/assert[assert] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-open[with-open]
 
 [[creating-functions]]
